2010-01-13  Pablo de la Concepción <pablo.concepcion@artica.es>

	* pandoradb.sql: Changed comment to show this is the official
	tables for 3.0 version instead of 2.0 version

2009-12-29  Sancho Lerena <slerena@artica.es>

	* pandoradb.sql: upps, too small, in huge systems could give a 
	problem in the autoinsert ID.

	* extras/pandoradb_migrate_v2.x_to_v3.0.sql: Fixed a broken line
	that make problems in our upgrade script. Added upgrade for
	update manager from 2.x to 3.0 version URL.

	* include/Image/image_functions.php: PHP 5.2 and higher does 
	not support (deprecated) get_mimetype. Avoiding headers lets
	the browser to decide contents of stream and now this works
	on modern PHP, before not :(

	* extensions/hello: Removed sample.

	* include/functions_servers.php: Fixed notice (division by 0).

	* include/functions_visual_map.php: Fixed problem in graphs 
	embedded in the visual console maps (problem with &amp; in fgraph
	call !!?).

	* include/config_process.php: Added supression of DEPRECATED
	system messages for PHP 5.2.11 or higher insted 5.3

	* godmode/agentes/module_manager_editor_prediction.php: Fixed several
	missing fields in the prediction module edition.

2009-12-28  Sancho Lerena <slerena@artica.es>

	* module_manager_editor_common.php: Latest changes from mdtrooper break
	some code, reverted specific changes in order to work.

	* pandoradb.sql: tnetwork_component double(18,13) -> double (18,3) by
	a typo !¡¿?. That is the type for tagente_modulo.

	* includes/languages/* : Updated languages for 3.0 final release.

	* include/config_process: Fixed problems detected in system/user 
	language settings. Now use config["language"] avoiding use of old 
	token "language_code"
	
	* include/function_config.php: config["language"] is now a "stardard" 
	config token, avoding to use as special one, was giving a big headache in
	order to maintain old compatibility. Now will use config["language"] always